# cerog

./: README.md  pyproject.toml  requirements.txt
app/: events.py  main.py  models.py  settings.py
app/api/: routes.py
app/api/controllers/: health.py  logger.py
app/api/dependencies/: database.py
app/api/services/: logger.py
app/models/: log_entries.py
tests/: test_cerog.py
